# Mandelbrot-Set-Renderer

./: .gitignore  README.md  config.py  constants.py  main.py  pyproject.toml  replit.nix
