[tool.poetry]
name = "repl-nix-mandelbrot-set-renderer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_mandelbrot_set_renderer"}]

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.59.0"
numpy = "^1.26.4"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
